replace method toList